Fixed: Z-index issue was left out in previus release Fixed: Setting to close fancybox when clicking on the overlay wasn't available in the menu Fixed: Frame width and height options are now in the "Other" tab Fixed: Tabs now translated in Spanish localization
git-svn-id: https://plugins.svn.wordpress.org/fancybox-for-wordpress/trunk@183486 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/fancybox.css
+++ b/css/fancybox.css
@@ -5,7 +5,7 @@ left: 0;
 width: 100%;
 height: 100%;
 display: none;
-z-index: 30;
+z-index: 300;
 }
 
 div#fancy_loading {
@@ -16,7 +16,7 @@ cursor: pointer;
 display: none;
 overflow: hidden;
 background: transparent;
-z-index: 100;
+z-index: 1000;
 }
 
 div#fancy_loading div {
@@ -32,7 +32,7 @@ div#fancy_outer {
 position: absolute;
 top: 0;
 left: 0;
-z-index: 90;
+z-index: 900;
 padding: 20px 20px 40px 20px;
 margin: 0;
 background: transparent;
@@ -48,7 +48,7 @@ background: #FFF;
 
 div#fancy_content {
 margin: 0;
-z-index: 100;
+z-index: 1000;
 position: absolute;
 }
 
@@ -57,7 +57,7 @@ background: #000;
 color: #FFF;
 height: 100%;
 width: 100%;
-z-index: 100;
+z-index: 1000;
 }
 
 img#fancy_img {
@@ -67,7 +67,7 @@ left: 0;
 border:0; 
 padding: 0; 
 margin: 0;
-z-index: 100;
+z-index: 1000;
 width: 100%;
 height: 100%;
 }
@@ -78,7 +78,7 @@ height: 30px;
 width: 30px;
 background: url('img/fancy_closebox.png') top left no-repeat;
 cursor: pointer;
-z-index: 181;
+z-index: 1810;
 display: none;
 }
 
@@ -101,7 +101,7 @@ bottom: 0px;
 height: 100%; 
 width: 35%; 
 cursor: pointer;
-z-index: 111; 
+z-index: 1110; 
 display: none;
 background-image: url("data:image/gif;base64,AAAA");
 outline: none;
@@ -122,7 +122,7 @@ top: 50%;
 margin-top: -15px;
 width: 30px;
 height: 30px;
-z-index: 112; 
+z-index: 1120; 
 cursor: pointer;
 display: block;
 }
@@ -164,7 +164,7 @@ position: absolute;
 top: 0; left: 0;
 width: 100%;
 height: 100%;
-z-index: 70;
+z-index: 700;
 border: 0;
 padding: 0;
 margin: 0;
@@ -173,7 +173,7 @@ margin: 0;
 div.fancy_bg {
 position: absolute;
 display: block;
-z-index: 70;
+z-index: 700;
 border: 0;
 padding: 0;
 margin: 0;
@@ -243,7 +243,7 @@ background: transparent url('img/fancy_shadow_nw.png') no-repeat;
 
 div#fancy_title {
 position: absolute;
-z-index: 100;
+z-index: 1000;
 display: none;
 }
 
